fixed green background not showing up full page

--- a/src/components/Video.css
+++ b/src/components/Video.css
@@ -1,6 +1,7 @@
 .videoCard {
     min-width: 270px;
     margin-bottom: 40px;
+   
 }
 
 
@@ -18,6 +19,7 @@
     margin-left: 5px;
     width: 270px;
     padding-left: 10px;
+     background: mediumpurple;
 }
 
 .videoCard__description h4 {
@@ -25,10 +27,12 @@
     margin-bottom: 5px;
     width: 350px;
     color: black;
+     background: mediumpurple;
 }
 .videoCard__description p {
     font-size: 14px;
     color: white;
+     background: mediumpurple;
 }
 
 .video__avatar {
@@ -39,4 +43,5 @@
 .video__container {
     margin: 25px;
 }
+
 
